[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.9.2",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "autobahn==24.4.2",
    "automat==25.4.16",
    "cffi==2.0.0",
    "channels==4.3.1",
    "channels-redis==4.3.0",
    "constantly==23.10.4",
    "cryptography==46.0.3",
    "daphne==4.2.1",
    "django==5.2.7",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.16.1",
    "hyperlink==21.0.0",
    "idna==3.11",
    "incremental==24.7.2",
    "msgpack==1.1.2",
    "pillow==11.3.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pyopenssl==25.3.0",
    "python-dotenv==1.1.1",
    "redis==6.4.0",
    "service-identity==24.2.0",
    "sqlparse==0.5.3",
    "tomli==2.3.0",
    "twisted==25.5.0",
    "txaio==25.9.2",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "zope-interface==8.0.1",
]
